# backend

./: Cargo.toml
src/: main.rs
src/lib/: is_date.rs  log.rs  mod.rs  parser.rs  prayer.rs  structs.rs  utils.rs
src/routes/: date.rs  mod.rs  next.rs  root.rs  today.rs
